:necktie: Add all REST API endpoints implementation for nest_service
